feat: smother theme switching (#131)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,62 @@
 
     <!--    <script crossorigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script>-->
   </head>
+
+  <style>
+    :root {
+      --expo-in: linear(
+        0 0%,
+        0.0085 31.26%,
+        0.0167 40.94%,
+        0.0289 48.86%,
+        0.0471 55.92%,
+        0.0717 61.99%,
+        0.1038 67.32%,
+        0.1443 72.07%,
+        0.1989 76.7%,
+        0.2659 80.89%,
+        0.3465 84.71%,
+        0.4419 88.22%,
+        0.554 91.48%,
+        0.6835 94.51%,
+        0.8316 97.34%,
+        1 100%
+      );
+    }
+
+    ::view-transition-group(root) {
+      animation-timing-function: var(--expo-in);
+    }
+
+    ::view-transition-new(root) {
+      mask: url("https://media.tenor.com/cyORI7kwShQAAAAi/shigure-ui-dance.gif") center / 0
+        no-repeat;
+      animation: scale 3s;
+      animation-fill-mode: both;
+    }
+
+    ::view-transition-old(root),
+    .dark::view-transition-old(root) {
+      animation: scale 3s;
+      animation-fill-mode: both;
+    }
+
+    @keyframes scale {
+      0% {
+        mask-size: 0;
+      }
+      10% {
+        mask-size: 50vmax;
+      }
+      90% {
+        mask-size: 50vmax;
+      }
+      100% {
+        mask-size: 2000vmax;
+      }
+    }
+  </style>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/polyfills.ts"></script>
